WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
40536
GraphicsContext3D.h in the Qt port includes too many unnecessary files
https://bugs.webkit.org/show_bug.cgi?id=40536
Summary
GraphicsContext3D.h in the Qt port includes too many unnecessary files
Noam Rosenthal
Reported
2010-06-12 20:32:34 PDT
This slows the build times and creates unnecessary MACRO collisions.
Attachments
Patch
(2.00 KB, patch)
2010-06-12 20:38 PDT
,
Noam Rosenthal
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Noam Rosenthal
Comment 1
2010-06-12 20:38:09 PDT
Created
attachment 58576
[details]
Patch
WebKit Commit Bot
Comment 2
2010-06-13 01:33:29 PDT
Comment on
attachment 58576
[details]
Patch Clearing flags on attachment: 58576 Committed
r61087
: <
http://trac.webkit.org/changeset/61087
>
WebKit Commit Bot
Comment 3
2010-06-13 01:33:33 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug